# gptree

./: Procfile  README.md  gemini.py  main.py  package.json  pyproject.toml  requirements.txt
javascript/: .env.development  .env.production  index.html  package-lock.json  package.json  vite.config.ts
javascript/src/: App.tsx
javascript/src/components/: Login.tsx  Signup.tsx
javascript/src/config/: firebase.tsx
python/: alembic.ini  database.py
python/alembic/: env.py  script.py.mako
python/alembic/versions/: 26d25f3f1a6e_create_user.py  568385c1244c_create_user.py  724bc5165d39_create_user.py
python/auth/: firebase.py  wrapper.py
python/database/: database.py  seed.py
python/llm/: llm.py
python/models/: metadata.py  turn.py  user.py
python/scripts/: fetch_firebase_users.py  multi_turn.py
python/web/: app.py  app_test.py  database.py
python/web/dao/: conversations.py  conversations_test.py
python/web/routers/: admin.py
python/web/schemas/: turn.py  user.py
