[project]
name = "gptree"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.2",
    "google-genai>=1.38.0",
    "gunicorn>=23.0.0",
    "sqlalchemy-utils>=0.42.0",
    "sqlmodel>=0.0.25",
    "uvicorn>=0.35.0",
]
