[project]
name = "gptree"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.5",
    "fastapi>=0.116.2",
    "google-genai>=1.38.0",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy-utils>=0.42.0",
    "sqlmodel>=0.0.25",
    "uvicorn>=0.35.0",
]
